--- a/WODs/BrowserHistory6/style.css
+++ b/WODs/BrowserHistory6/style.css
@@ -1,36 +1,32 @@
-h1, h2 {
-    font-family: 'Oswald', sans-serif;
-}
-p {
-    font-family: 'Open Sans', sans-serif;
+h1,h2{
+  font-family: 'oswald';
+  color: yellow;
 }
 
-body {
-    color: DarkBlue;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 50px;
-    margin-right: 50px;
-    width: 950px;
-    background-color: ivory;
+body{
+  font-family: 'open sans';
+  color: yellow;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 50px;
+  margin-right: 50px;
+  background-color: black;
+ 
 }
-img {
-    float: left;
+#picture{
+display: flex; 
+  
 }
-.left {
-    float: left;
-    width: 300px;
-    padding: 10px;
+
+li{
+  display: inline-block;
+  text-align: center;
+  padding: 10px;
+
+  
 }
-.right {
-    float: right;
-    width: 300px;
-    padding: 10px;
-}
-.center {
-    padding: 10px;
-}
-li {
-    display: inline;
-    margin-right: 100px;
+#column {
+display: inline-block;
+width: 300px;
+vertical-align: top;
 }
