--- a/Lab6/SmartPhoneProducts1_1/products-style.css
+++ b/Lab6/SmartPhoneProducts1_1/products-style.css
@@ -19,7 +19,7 @@ body {
 
 h1, h2, h3 {
   
-  font-family: 'Open-sans', sans-serif;
+  font-family: 'Cherry Swash', cursive;
   margin: 0;
   
   text-align: center;
@@ -27,7 +27,7 @@ h1, h2, h3 {
 
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
   background-size: 48px 48px;
   background-blend-mode: lighten;
 }
@@ -81,11 +81,6 @@ footer {
 footer h1 {
   font-style: italic;
   font-size: 3rem;
-}
-
-footer p {
-  text-align: left;
-  font-style: italic;
 }
 
 aside {
