--- a/Ramel_BJAngelo_Assignment2/public/style.css
+++ b/Ramel_BJAngelo_Assignment2/public/style.css
@@ -10,6 +10,42 @@ body {
     height: 100; /* Only on invoice and product*/
 }
 
+.login-container {
+    background-color: #208E0E;;
+    width: 30%;
+    padding: 20px; /* Increased padding for the container */
+    margin: 20vh auto;
+    text-align: left; /* Adjusted text alignment */
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    min-height: 50vh;
+}
+
+.login-container h1 {
+    text-align: left;
+    color: white; /* Adjust the color as needed */
+}
+
+.login-container p {
+    text-align: left;
+    color: white; /* Adjust the color as needed */
+    margin-bottom: 20px; /* Adjust the margin as needed */
+}
+
+.login-container input[type="text"],
+.login-container input[type="password"] {
+    width: 80%; /* Adjusted width as needed */
+    padding: 10px; /* Adjusted padding for more spacing */
+    margin: 5px 0; /* Adjusted margin for spacing between textboxes */
+    box-sizing: border-box;
+    border: none; /* Removed borders */
+    border-radius: 3px; /* Added a small border-radius for a softer appearance */
+    box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.5);
+}
+
 .invoice-container {
     background-color: rgba(0, 0, 0, 0.7);
     color: #208E0E;
@@ -71,12 +107,17 @@ table {
 }
 
 /* Navigation bar styles */
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+
 nav {
     background-color: #333;
     overflow: hidden;
-    margin: 0; /* Add this line to remove default margin */
-    padding: 0; /* Add this line to remove default padding */
-    width: 106.5%;
+    margin: 0;
+    padding: 0; /* Add this line to ensure no padding */
+    width: 108%;
 }
 
 nav a {
@@ -100,6 +141,10 @@ nav::after {
 
 .navbar {
     padding-left: 20px; /* Adjust the value as needed */
+}
+
+form {
+    margin-top: 20px;
 }
 
 #productForm {
